# userstory8020

./: .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
client_data/outputcsv/: .part-00000-93299c99-679e-4a10-90b1-6d781466ead7-c000.csv.crc  part-00000-93299c99-679e-4a10-90b1-6d781466ead7-c000.csv
tests/: conftest.py  test_app.py
userstory8020/: __init__.py  __main__.py  app.py  factory.py  logging_conf.yml  process.json
